--- a/blog/composer.json
+++ b/blog/composer.json
@@ -12,7 +12,8 @@
         "yuanchao/laravel-5-markdown-editor": "dev-master",
         "michelf/php-markdown": "^1.6",
         "michelf/php-smartypants": "1.6.0-beta1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "dflydev/apache-mime-types": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -25,6 +26,9 @@
         "classmap": [
             "database"
         ],
+        "files": [
+                   "app/helpers.php"
+          ],
         "psr-4": {
             "App\\": "app/"
         }
