--- a/blog/composer.json
+++ b/blog/composer.json
@@ -27,7 +27,8 @@
             "database"
         ],
         "files": [
-                   "app/helpers.php"
+                   "app/helpers.php",
+                   "app/helpers/comments.php"
           ],
         "psr-4": {
             "App\\": "app/"
